# melissa

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  FindZeroMQ.cmake  LICENSE  MelissaConfig.cmake.in  README.md  build-and-test.sh  install_script.sh  job_scheduler_config.py  melissa-zmq.cmake  melissaConfig.cmake.in  melissa_set_env.sh.in  run_script.sh  test-cmake.sh
api/: CMakeLists.txt  README.md  flowvr_group.cpp  melissa_api.c  melissa_api.f  melissa_api.f90  melissa_api.h  melissa_api.h.in  melissa_api.py  melissa_api.py.in  melissa_api_fortran.f90  melissa_api_no_mpi.h  melissa_api_no_mpi.h.in  melissa_api_no_mpi.py  stats_api.c  stats_api.h  stats_api_fortran.f90  stats_api_no_mpi.h
common/: CMakeLists.txt  melissa_comm4py.c  melissa_messages.c  melissa_messages.h  melissa_utils.c  melissa_utils.h  vector.c  vector.h
examples/: CMakeLists.txt  Melissa-monitoring-notebook.ipynb  Mellisa-monitoring-notebook.ipynb  README.md  batchspawner.py  create_file_master_name.c  create_file_server_name.c  job_scheduler_config.py  test_base.c  test_covariance.c  test_getoptions.c  test_mean.c  test_sobol.c  test_variance.c
examples/Code_Saturne/: CMakeLists.txt  README.md  options.py  options.py.in  run-code-saturne.py.in
examples/MelissaMonitoring/: CMakeLists.txt  README.md  interface.py  main.py  utils.py
examples/TELEMAC-2D/: CMakeLists.txt  CMakeLists.txt.in  README.txt  geo_gouttedo.slf  melissa_to_serafin.f  options.py.in
examples/droplet_example/: CMakeLists.txt  create_group.py  create_group.py.in  options.py  options.py.in  t2d_gouttedo.cas
examples/fluid_example/: CMakeLists.txt  options.py.in  parallel.py
examples/fluidsimulation/: melissa_learning.py
examples/game_of_life_example/: BaseOptions.py.in  CMakeLists.txt  README.md  readme.md
examples/heat-pde/: CMakeLists.txt  CMakeLists.txt.in  README.md  heat.c  heat.py.in  heat_utils.f90  options.py  plot-results.py
examples/heat-pde-example/: CMakeLists.txt  CMakeLists.txt.in  heat.c  heat.f90  heat.py.in  options.py
examples/heat_example/: CMakeLists.txt  README.md  crash_server.py  data.txt  heat.c  heat.f90  heat_base.c  heat_base.f90  heat_no_mpi.c  heat_no_mpi.f90  heat_utils.f90  heat_utils_no_mpi.f90  master.py  mpi_reader.c  options.py  run_heat_c.sh  run_heat_c_sobol.sh  run_heat_f.sh
examples/heat_example_base/: CMakeLists.txt  README.md  heat_base.c  heat_base.f90  heat_base.py  heat_utils.f90  heat_utils_no_mpi.f90  options.py
examples/heat_example_no_mpi/: CMakeLists.txt  crash_server.py  heat.c  heat.f90  heat_utils.f90  master.py  mpi_reader.c  options.py
examples/test_client/: CMakeLists.txt  client.c  run_mpi_zmq_clients.sh
examples/test_flowvr/: data_generator.cpp  test_flowvr.py
examples/virtual_cluster/: CMakeLists.txt  Dockerfile.base  Dockerfile.node  Dockerfile.server  README.md  custom_setup.base.sh  custom_setup.node.sh  custom_setup.server.sh  oardocker.sh  oardocker.sh.in  slurm.conf  slurm.conf.in  slurm_start.sh  start_slurm.sh
include/: CMakeLists.txt  melissa_api_no_mpi.h
include/melissa/: api.f90  api.h  api.h.in  config.h.in  messages.h  utils.h  vector.h
launcher/: CMakeLists.txt  batchspawner.py  create_group.py  fault_tolerance.py  melissa_launcher.py  melissa_launcher.py.in  options.json  options.py  simulation.py  simulation.py.in  study.py  study.py.in  utils.py
master/: CMakeLists.txt  batch_scripts.py  call_bash.py  fault_tolerance.py  master.py  matrix_sobol.py  study.py
melissa/: CMakeLists.txt  config.py.in
melissa/launcher/: __main__.py  job_management.py  options.py  simulation.py  study.py  utils.py
melissa/scheduler/: dummy.py  job.py  oar.py  openmpi.py  options.py  scheduler.py  slurm.py
output/: CMakeLists.txt  melissa_output.c  melissa_output.h  melissa_output_netcdf.c  melissa_output_parflow_netcdf.c  melissa_output_txt.c
server/: CMakeLists.txt  README.md  compute_stats.c  compute_stats.h  convert_ensight.c  ensight_server.c  fault_tolerance.c  fault_tolerance.h  interface_flowvr.cpp  master.py  melissa_data.c  melissa_data.h  melissa_fields.c  melissa_fields.h  melissa_io.c  melissa_io.h  melissa_learning.py  melissa_options.c  melissa_options.h  melissa_server.py.in  melissa_server_tf.py.in  server.c  server.cxx  server.h  server_helper.c  server_sofiia.c  test_getoptions.c
server/output/: CMakeLists.txt  melissa_output.c  melissa_output.h  melissa_output_ensight.c  melissa_output_netcdf.c  melissa_output_txt.c
server/stats/: CMakeLists.txt  covariance.c  covariance.h  general_moments.c  general_moments.h  learning.c  learning.h  mean.c  mean.h  min_max.c  min_max.h  quantile.c  quantile.h  sobol.c  sobol.h  threshold.c  threshold.h  (+2 more)
src/: CMakeLists.txt  comm4py.c  compute_stats.c  compute_stats.h  cond_mean.c  cond_var.c  covariance.c  covariance.h  ensight_server.c  get_options.c  interface_flowvr.cpp  master.py  mean.c  mean.h  melissa_data.c  melissa_data.h  melissa_io.c  melissa_options.c  melissa_options.h  melissa_utils.c  melissa_utils.h  messages.c  min_max.c  min_max.h  save_data.c  server.c  server.h  server_helper.c  sobol.c  sobol.h  stats.h  stats_base.c  stats_data.c  threshold.c  threshold.h  utils.c  variance.c  write_stats.c
stats/: CMakeLists.txt  covariance.c  covariance.h  general_moments.c  general_moments.h  learning.c  learning.h  mean.c  mean.h  min_max.c  min_max.h  quantile.c  quantile.h  sobol.c  sobol.h  threshold.c  threshold.h  variance.c  variance.h
tests/: CMakeLists.txt  base.c  covariance.c  dummy-simulation-options.py.in  dummy-simulation.c  getoptions.c  mean.c  melissa_options_get_fields.c  regression-105.cpp  regression_16.c  sobol.c  test_base.c  test_covariance.c  test_getoptions.c  test_horovod.py.in  test_mean.c  test_sobol.c  test_variance.c  variance.c
utility/: CMakeLists.txt  Melissa-monitoring-notebook.ipynb  README.md
utils/: CMakeLists.txt  create_file_master_name.c  create_file_server_name.c  get_message.c  melissa_comm4py.c  melissa_message.c  melissa_messages.c  melissa_messages.h  melissa_utils.c  melissa_utils.h  vector.c  vector.h
(+320 files in other folders)
